[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rp_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pylint = "^2.16.1"
pytest = "^7.2.1"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.report]
precision = 20
skip_covered = true
fail_under = 35

[tool.coverage.run]
brach = true
command_line = '-m pytest'
source = ['rp-poetry/']
